--- a/publications.html
+++ b/publications.html
@@ -169,7 +169,7 @@ Computational Intelligence (SSCI 2017)</em>, IEEE Press, 2018
 </div>
 
 <div class=publication>
-Mathias Perslev, Akshay  Pai, Christian Igel, Erik Dam. Knee
+Mathias Perslev, Akshay  Pai, Christian Igel, and Erik Dam. Knee
   Segmentation by Multiplanar Deep Learning Network – with data from
   OAI.
   <em>International Workshop on Osteoarthritis Imaging</em>, 2018
@@ -1174,7 +1174,7 @@ and <a href="http://homepages.inf.ed.ac.uk/mtoussai">Marc Toussaint</a>. <a href
 </div>
 
 <div class=publication>Christian Igel and <a href="http://homepages.inf.ed.ac.uk/mtoussai">Marc Toussaint</a>. <a href="paper/OCoFfwNFLRH.pdf">On Classes of Functions for which No Free Lunch Results Hold</a>.  <em>Information Processing
-Letters</em> <vol>86</vol>(6), pp. 317-321, 2003 </div>
+Letters</em> <vol>86</vol>(6), pp. 317-321, 2003</div>
 
 <div class=publication>
 Thomas B&uuml;cher, <a href="http://www.kyb.mpg.de/~curio">Cristobal Curio</a>, Johann Edelbrunner, Christian Igel, David Kastrup, 
@@ -1231,15 +1231,22 @@ Computation (BioGEC 2002)</em>, pp. 35-37, 2002</div>
 <div class=publication><a href="http://www.neuroinformatik.ruhr-uni-bochum.de/ini/PEOPLE/huesken/top.html">Michael H&uuml;sken</a> and Christian Igel. 
 <a href="paper/BLaE.pdf">Balancing Learning and Evolution</a>. In W. B. Langdon, E. Cantu-Paz, K. Mathias, R. Roy, D. Davis, R. Poli,
 K. Balakrishnan, V. Honavar, G. Rudolph, J. Wegener, L. Bull,
-M. A. Potter, A. C. Schultz, J. F. Miller, E. Burke, and N. Jonoska, eds.: <em>Proceedings of the Genetic and Evolutionary Computation Conference (GECCO 2002)</em>, pp. 391-398, 2002, Morgan Kaufmann
+M. A. Potter, A. C. Schultz, J. F. Miller, E. Burke, and N. Jonoska,
+  eds.: <em>Proceedings of the Genetic and Evolutionary Computation
+  Conference (GECCO 2002)</em>, pp. 391-398, 2002, Morgan Kaufmann, 2002
 </div>
 
 
 <div class=publication>Christian Igel and Peter Stagge. <a href="paper/GIESOoNN.ps.gz">Graph Isomorphisms Affect Structure Optimization of Neural Networks</a>. <em>International
-  Joint Conference on Neural Networks 2002 (IJCNN 2002)</em>, pp. 142-147, IEEE Press
+  Joint Conference on Neural Networks 2002 (IJCNN 2002)</em>,
+  pp. 142-147, IEEE Press, 2002
 </div>
 
-<div class=publication><a href="http://homepages.inf.ed.ac.uk/mtoussai">Marc Toussaint</a> and Christian Igel. <a href="paper/NANfSA.pdf">Neutrality: A Necessity for Self-Adaptation</a>. <em>Congress on Evolutionary Computation 2002 (CEC 2002)</em>, pp. 1354-1359, IEEE Press
+<div class=publication><a
+  href="http://homepages.inf.ed.ac.uk/mtoussai">Marc Toussaint</a> and
+  Christian Igel. <a href="paper/NANfSA.pdf">Neutrality: A Necessity
+  for Self-Adaptation</a>. <em>Congress on Evolutionary Computation
+  2002 (CEC 2002)</em>, pp. 1354-1359, IEEE Press, 2002
 </div>
 
 
@@ -1280,7 +1287,7 @@ Leefken</a> and <a
 href="http://www.neuroinformatik.ruhr-uni-bochum.de/ini/PEOPLE/seelen/top.html">Werner
 von Seelen</a>. Application and Optimization of Neural Field Dynamics
 for Driver Assistance. In <em>The IEEE 4th International Conference on
-Intelligent Transportation Systems (ITSC '01)</em>, pp. 309-314, IEEE Press, 2001
+Intelligent Transportation Systems (ITSC '01)</em>, pp. 309-314, IEEE Press, 2001.
 </div>
 
 
@@ -1325,7 +1332,7 @@ Christian Igel and <a href="http://vision.ucsd.edu/~kchellap/">Kumar
 Chellapilla</a>.  <a href="paper/FDTfDEEC.ps.gz">Fitness Distributions: Tools for Designing Efficient
 Evolutionary Computations</a>.  In L. Spector, W. B. Langdon,
 U.-M. O'Reilly, and P. J. Angeline, eds.: <em>Advances in Genetic
-Programming 3</em>, Chapter 9, pp. 191-216, MIT Press, 1999 
+Programming 3</em>, Chapter 9, pp. 191-216, MIT Press, 1999
 </div>
 
 <div class=publication>Christian Igel and <a
@@ -1384,11 +1391,11 @@ Gustavo Olague, Yew-Soon Ong, Martin Pelikan, David Pelta, Clara
 Pizzuti, Mike Preuss, Jonathan Rowe, Stephen Leslie Smith, Christine
 Solnon, Giovanni Squillero, Daniel Tauritz, Man Leung Wong, Shin Yoo, and
 Tina Yu, eds.: <em>Proceedings of the Fourteenth International Conference on
-Genetic and Evolutionary Computation (GECCO 2012)</em>, ACM Press, 2012 (ESEP track chair) </div>
+Genetic and Evolutionary Computation (GECCO 2012)</em>, ACM Press, 2012 (ESEP track chair)</div>
 
 <div class=publication> Andreas K&ouml;nig,  Mario K&ouml;ppen,  Ajith Abraham,
 Christian Igel, and Nikola Kasabov, eds.: <em>International Conference on Hybrid
-Intelligent Systems (HIS 2007)</em>, IEEE Computer Society, 2007 </div>
+Intelligent Systems (HIS 2007)</em>, IEEE Computer Society, 2007</div>
 
 
 
@@ -1409,39 +1416,47 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 
 
 <h3>Abstracts and not peer-reviewed contributions to conferences</h3>
+<div class=publication>
+Mathias Perslev, Akshay  Pai, Christian Igel, Jos Runhaar, and Erik Dam.. Validation of an
+  open source, generic deep learning architecture for 3D MRI
+  segmentation - with data from the OAI, PROOF, and
+  CCBR. <em>Osteoarthritis and Cartilage</em> <vol>27</vol>(Supplement
+  1), pp. S393–S394, 2019
+</div>
 
 <div class=publication>
-Lauge Sørensen, Christian Igel, and Mads Nielsen. MCI trial enrichment using MRI hippocampus texture. <em>Alzheimer’s & Dementia: The Journal of the Alzheimer’s Association</em>, 2016.
+Lauge Sørensen, Christian Igel, and Mads Nielsen. MCI trial enrichment using MRI hippocampus texture. <em>Alzheimer’s & Dementia: The Journal of the Alzheimer’s Association</em>, 2016
 </div>
+
 
 <div class=publication>Michiel Kallenberg, Martin Lilholm, Pengfei Diao, Katharina Holland, Nico Karssemeijer, Christian Igel, and
 Mads Nielsen. Assessing breast cancer masking risk in full field digital
 mammography with automated texture analysis. In  <em>7th International
 Workshop on Breast Densitometry and Cancer Risk Assessment (Non-CME)</em>,
-p. 109. University of California, 2015.
+p. 109. University of California, 2015
 </div>
 
-<div class=publication>Michiel Kallenberg, Martin Lilholm, Pengfei Diao, Kersten Petersen, Katharina Holland, Nico Karssemeijer, Christian Igel, and Mads Nielsen. Assessing breast cancer masking risk with automated texture analysis in full field digital mammography. In  <em>Breast Imaging and Interventional</em>, p. 218. Radiological Society of North America, Inc, 2015.
+<div class=publication>Michiel Kallenberg, Martin Lilholm, Pengfei Diao, Kersten Petersen, Katharina Holland, Nico Karssemeijer, Christian Igel, and Mads Nielsen. Assessing breast cancer masking risk with automated texture analysis in full field digital mammography. In  <em>Breast Imaging and Interventional</em>, p. 218. Radiological Society of North America, Inc, 2015
 </div>
 
 <div class=publication> Michiel Kallenberg, K. Petersen, M. Lilholm, D. Jrgensen, P. Diao, K. Holland,
-N. Karssemeijer, Christian Igel, and Mads Nielsen. Automated texture scoring for assessing breast cancer masking risk in full field digital mammography. In  <em>European Congress of Radiology (ERC 2015)</em>, 2015.
+N. Karssemeijer, Christian Igel, and Mads Nielsen. Automated texture scoring for assessing breast cancer masking risk in full field digital mammography. In  <em>European Congress of Radiology (ERC 2015)</em>, 2015
 </div>
 
-<div class=publication>Jan Kremer, Kim Steenstrup Pedersen, and Christian Igel. Support vector machines for active learning. In E <em>uropean Conference on Data Analysis (ECDA)</em>, 2014.
+<div class=publication>Jan Kremer, Kim Steenstrup Pedersen, and Christian Igel. Support vector machines for active learning. In E <em>uropean Conference on Data Analysis (ECDA)</em>, 2014
 </div>
 
-<div class=publication>Lauge Sørensen, Akshay Pai, Christian Igel, and Mads Nielsen. Hippocampal MRI texture is related to hippocampal glucose metabolism. <em> Alzheimer’s & Dementia: The Journal of the Alzheimer’s Association</em> 11(7, Supplement):P55–P56, 2015.
+<div class=publication>Lauge Sørensen, Akshay Pai, Christian Igel, and Mads Nielsen. Hippocampal MRI texture is related to hippocampal glucose metabolism. <em> Alzheimer’s & Dementia: The Journal of the Alzheimer’s Association</em> 11(7, Supplement):P55–P56, 2015
 </div>
 
-<div class=publication>Mads Nielsen, Christian Igel, and Lauge Sørensen. Hippocampal texture predicts ad conversion in amyloid positive mild cognitively impaired subjects.  <em>Neurodegenerative Diseases</em> 15(Suppl. 1):262, 2015.
+<div class=publication>Mads Nielsen, Christian Igel, and Lauge Sørensen. Hippocampal texture predicts ad conversion in amyloid positive mild cognitively impaired subjects.  <em>Neurodegenerative Diseases</em> 15(Suppl. 1):262, 2015
 </div>
 
-<div class=publication>Lauge Sørensen, Martin Lillholm, Akshay Pai, Ioana Balas, Cecilie Anker, Christian Igel, and Mads Nielsen. Improved alzheimer’s disease diagnostic performance using structural MRI: validation of the MRI combination biomarker that won the caddementia challenge. In  <em>ECR 2015 Book of Abstracts - B - Scientific Sessions and Late-Breaking Clinical Trials</em>, p. S177. Springer-Verlag, 2015.
+<div class=publication>Lauge Sørensen, Martin Lillholm, Akshay Pai, Ioana Balas, Cecilie Anker, Christian Igel, and Mads Nielsen. Improved alzheimer’s disease diagnostic performance using structural MRI: validation of the MRI combination biomarker that won the caddementia challenge. In  <em>ECR 2015 Book of Abstracts - B - Scientific Sessions and Late-Breaking Clinical Trials</em>, p. S177. Springer-Verlag, 2015
 </div>
 
 
-<div class=publication>Mads Nielsen, Lauge Sørensen, Akshay Pai, Christian Igel, and Martin Lillholm. Hippocampus MRI T1 texture’s relation to established alzheimer’s disease biomarkers and prediction of progression. In  <em>101st Scientific Assembly and Annual Meeting of the Radiological Society of North America</em>, 2015.
+<div class=publication>Mads Nielsen, Lauge Sørensen, Akshay Pai, Christian Igel, and Martin Lillholm. Hippocampus MRI T1 texture’s relation to established alzheimer’s disease biomarkers and prediction of progression. In  <em>101st Scientific Assembly and Annual Meeting of the Radiological Society of North America</em>, 2015
 </div>
 
 <div class=publication>
@@ -1450,7 +1465,7 @@ Mads Nielsen. Validation of hippocampal texture for early Alzheimers
 disease detection: Generalization to independent cohorts and
 extrapolation to very early signs of dementia.  <em>Alzheimer’s & Dementia:
 The Journal of the Alzheimer’s Association</em> 10(4, AAIC supplement):P139,
-2014.
+2014
 </div>
 
 <div class=publication>
@@ -1459,7 +1474,7 @@ Mads Nielsen. Validation of hippocampal texture for early Alzheimers
 disease detection: Generalization to independent cohorts and
 extrapolation to very early signs of dementia.  <em>Alzheimer’s & Dementia:
 The Journal of the Alzheimer’s Association</em> 10(4, AIC supplement):P133,
-2014.
+2014
 </div>
 
 
