--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,13 @@ scholar profile</a>.
 <h4>Coming soon</h4><a name="top"></a> 
 
 <div class=publication>
+Oswin Krause, Asja Fischer and Christian Igel. 
+Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines. 
+  <em>Artificial Intelligence</em><vol></vol>, accepted
+</div>
+
+  
+<div class=publication>
   Mathias Perslev,
 Michael Hejselbak Jensen,
 Sune Darkner,
@@ -48,16 +55,6 @@ Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
 <em>Machine Learnig in Clinical Neuroimaging (MLCN 2019)</em>, accepted
 </div>
 
-<div class=publication>
-Mathias Perslev,
-    Erik Dam,
-    Akshay Pai, and
-    Christian Igel.
-One Network To Segment Them All: A General, Lightweight System for
-  Accurate 3D Medical Image Segmentation. In:
-<em>Medical Image Computing and Computer Assisted
-  Intervention (MICCAI)</em>, accepted
-</div>
 
 <a name="y19"></a>
 
@@ -120,6 +117,19 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
    In:  <em>Medical Imaging 2019: Image Processing</em>, Proceedings
   of SPIE <vol>10949</vol>, SPIE, 2019
 </div>
+
+
+<div class=publication>
+Mathias Perslev,
+    Erik Dam,
+    Akshay Pai, and
+    Christian Igel.
+One Network To Segment Them All: A General, Lightweight System for
+  Accurate 3D Medical Image Segmentation. In:
+<em>Medical Image Computing and Computer Assisted
+  Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
+</div>
+
 
 <a name="y18"></a>
 <h4>2018</h4>
