added some software

--- a/downloads.html
+++ b/downloads.html
@@ -13,6 +13,9 @@
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
 <div class="sidenavsub">
+  <a href="#mpunet">Multi-Planar UNet</a>
+  <a href="#utime">U-Time</a>
+   <a href="#woody">woody</a>
   <a href="#bufferkdtree">bufferkdtree</a>
   <a href="#Shark">Shark</a>
   <a href="#nnratio">nnratio</a>
@@ -30,6 +33,47 @@
 <div id="inner-page">
 <h1>Downloads</h1>
  
+<a name="mpunet"></a> 
+  <h2>Multi-Planar UNet</h2>
+  Download 
+ <a href="https://github.com/perslev/MultiPlanarUNet">Multi-Planar
+  UNet</a>.
+
+  <h3>Paper describing the package</h3> 
+<div class=publication>
+Mathias Perslev,
+    Erik Dam,
+    Akshay Pai, and
+    Christian Igel.
+One Network To Segment Them All: A General, Lightweight System for
+  Accurate 3D Medical Image Segmentation. In:
+<em>Medical Image Computing and Computer Assisted
+  Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
+</div>
+
+<h2>U-Time</h2>
+Coming soon.
+
+<div class=publication><img src="images/CMA_cartoon.gif"  align="right" style="margin: 0px 10px 10px 10px" width="100" alt="[CMA-ES]">
+  Oswin Krause, D&iacute;dac R. Arbon&egrave;s, and Christian Igel.
+  <a href="paper/CMA-ESwOCUaSC.pdf">CMA-ES with Optimal Covariance Update and Storage Complexity</a>.
+  <em>Advances in Neural Information Processing Systems (NIPS)</em>,
+  <a href="paper/CMA-ESwOCUaSCSuppl.pdf" class="sup">supplement</a>, 2016
+</div>
+
+
+ <h2>woody</h2>
+ Download 
+ <a href="https://github.com/gieseke/woody">woody</a>, a Python
+  library for constructing very large random forests.
+<h3>Paper describing the package</h3> 
+<div class=publication>
+  Fabian Gieseke and Christian Igel.
+  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
+  <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
+  (KDD)</em>, pp. 1445-1454, ACM Press, 2018
+</div>
+  
 <a name="bufferkdtree"></a> 
 <h2>bufferkdtree</h2>
 <a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
