--- a/publications.html
+++ b/publications.html
@@ -29,11 +29,6 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-<div class=publication>
-Oswin Krause, Asja Fischer and Christian Igel. 
-Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines. 
-  <em>Artificial Intelligence</em><vol></vol>, accepted
-</div>
 
   
 <div class=publication>
@@ -48,17 +43,17 @@ U-Time: A Fully Convolutional Network for Time Series Segmentation
   (NeurIPS 2019)</em>, accepted
   </div>
   
-<div class=publication>
-Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
-  Sebastien Ourselin, Marc Modat, Mads Nielsen, and Akshay Pai.
-  Knowledge distillation for semi-supervised domain adaptation.
-<em>Machine Learnig in Clinical Neuroimaging (MLCN 2019)</em>, accepted
-</div>
-
 
 <a name="y19"></a>
 
 <h4>2019</h4>
+<div class=publication>
+Oswin Krause, Asja Fischer, and Christian Igel. 
+<a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines</a>. 
+  <em>Artificial Intelligence</em><vol></vol>, 2019
+</div>
+
+
 <div class=publication>
 Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for
@@ -109,6 +104,17 @@ In: <em>IEEE International Symposium on Biomedical Imaging
 
 
 <div class=publication>
+Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
+  Sebastien Ourselin, Marc Modat, Mads Nielsen, and Akshay Pai.
+  <a href="https://arxiv.org/abs/1908.07355">Knowledge distillation
+  for semi-supervised domain adaptation</a>.
+  In:
+<em>Machine Learnig in Clinical Neuroimaging (MLCN 2019)</em>, LNCS
+  <vol>11796</vol>, pp. 68-76, 2019
+</div>
+
+
+<div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
   Akshay Pai.
@@ -117,6 +123,7 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
    In:  <em>Medical Imaging 2019: Image Processing</em>, Proceedings
   of SPIE <vol>10949</vol>, SPIE, 2019
 </div>
+
 
 
 <div class=publication>
