added links to software

--- a/downloads.html
+++ b/downloads.html
@@ -33,7 +33,9 @@
 <div id="inner-page">
 <h1>Downloads</h1>
  
-<a name="mpunet"></a> 
+  <a name="mpunet"></a>
+  <p>
+  
   <h2>Multi-Planar UNet</h2>
   Download 
  <a href="https://github.com/perslev/MultiPlanarUNet">Multi-Planar
@@ -51,6 +53,9 @@ One Network To Segment Them All: A General, Lightweight System for
   Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
 </div>
 
+<a name="utime"></a>
+<p>
+
 <h2>U-Time</h2>
 Coming soon.
 
@@ -61,6 +66,8 @@ Coming soon.
   <a href="paper/CMA-ESwOCUaSCSuppl.pdf" class="sup">supplement</a>, 2016
 </div>
 
+<a name="woody"></a>
+<p>
 
  <h2>woody</h2>
  Download 
