--- a/publications.html
+++ b/publications.html
@@ -134,7 +134,7 @@ Mathias Perslev,
 One Network To Segment Them All: A General, Lightweight System for
   Accurate 3D Medical Image Segmentation. In:
 <em>Medical Image Computing and Computer Assisted
-  Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
+  Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019 <a href="downloads.html#mpunet" class="sup">source code</a>
 </div>
 
 
