fixed wring citation

--- a/downloads.html
+++ b/downloads.html
@@ -54,19 +54,27 @@ One Network To Segment Them All: A General, Lightweight System for
 </div>
 
 <a name="utime"></a>
+
 <p>
 
 <h2>U-Time</h2>
+
 Coming soon.
 
-<div class=publication><img src="images/CMA_cartoon.gif"  align="right" style="margin: 0px 10px 10px 10px" width="100" alt="[CMA-ES]">
-  Oswin Krause, D&iacute;dac R. Arbon&egrave;s, and Christian Igel.
-  <a href="paper/CMA-ESwOCUaSC.pdf">CMA-ES with Optimal Covariance Update and Storage Complexity</a>.
-  <em>Advances in Neural Information Processing Systems (NIPS)</em>,
-  <a href="paper/CMA-ESwOCUaSCSuppl.pdf" class="sup">supplement</a>, 2016
-</div>
-
-<a name="woody"></a>
+<div class=publication>
+  Mathias Perslev,
+Michael Hejselbak Jensen,
+Sune Darkner,
+Poul Jørgen Jennum, and
+Christian Igel. 
+U-Time: A Fully Convolutional Network for Time Series Segmentation
+  Applied to Sleep Staging.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2019)</em>, 2019
+  </div>
+  
+  <a name="woody"></a>
+  
 <p>
 
  <h2>woody</h2>
@@ -81,7 +89,10 @@ Coming soon.
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
   
-<a name="bufferkdtree"></a> 
+<a name="bufferkdtree"></a>
+
+<p>
+
 <h2>bufferkdtree</h2>
 <a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
 style="margin: 10px 10px 20px 10px"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
