--- a/downloads.html
+++ b/downloads.html
@@ -61,6 +61,7 @@ One Network To Segment Them All: A General, Lightweight System for
 
 Coming soon.
 
+<h3>Paper describing the package</h3> 
 <div class=publication>
   Mathias Perslev,
 Michael Hejselbak Jensen,
