--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Professor, Dr. habil.
  </table>
 </dl>
 <h3>Short CV</h3>
-<p>I am a professor at <a href="http://diku.dk">DIKU</a>, the <a href="http://diku.kd">Department of
+<p>I am professor at <a href="http://diku.dk">DIKU</a>, the <a href="http://diku.kd">Department of
   Computer Science</a> at the <a href="http://ku.dk">University of Copenhagen</a>.
 I studied Computer Science at the Technical University of Dortmund, Germany. In 2002, I received my Doctoral degree from the Faculty of Technology, Bielefeld University, Germany, and in 2010 my Habilitation degree from the Department of Electrical Engineering and Information Sciences, Ruhr-University Bochum, Germany.
 From 2003 to 2010, I was a Juniorprofessor for Optimization of
