--- a/downloads.html
+++ b/downloads.html
@@ -63,13 +63,8 @@ Coming soon.
 
 <h3>Paper describing the package</h3> 
 <div class=publication>
-  Mathias Perslev,
-Michael Hejselbak Jensen,
-Sune Darkner,
-Poul Jørgen Jennum, and
-Christian Igel. 
-U-Time: A Fully Convolutional Network for Time Series Segmentation
-  Applied to Sleep Staging.
+  Mathias Perslev, Michael Hejselbak Jensen, Sune Darkner, Poul Jørgen Jennum, and Christian Igel. 
+  U-Time: A Fully Convolutional Network for Time Series Segmentation Applied to Sleep Staging.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS 2019)</em>, 2019
   </div>
