added arXiv links

--- a/downloads.html
+++ b/downloads.html
@@ -47,8 +47,8 @@ Mathias Perslev,
     Erik Dam,
     Akshay Pai, and
     Christian Igel.
-One Network To Segment Them All: A General, Lightweight System for
-  Accurate 3D Medical Image Segmentation. In:
+<a href="https://arxiv.org/abs/1911.01764">One Network To Segment Them All: A General, Lightweight System for
+  Accurate 3D Medical Image Segmentation</a>. In:
 <em>Medical Image Computing and Computer Assisted
   Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
 </div>
@@ -59,6 +59,9 @@ One Network To Segment Them All: A General, Lightweight System for
 
 <h2>U-Time</h2>
 
+U-Time is a fully feed-forward deep learning approach to physiological time series segmentation developed for the analysis of sleep data. U-Time is a temporal fully convolutional network based on the U-Net architecture.It maps sequential inputs of arbitrary length to sequences of class labels on a freely chosen temporal scale. This is done by implicitly classifying every individual time-point of the input signal and aggregating these classifications over fixed intervals to form the final predictions. 
+
+
 Coming soon.
 
 <h3>Paper describing the package</h3> 
@@ -68,8 +71,8 @@ Michael Hejselbak Jensen,
 Sune Darkner,
 Poul Jørgen Jennum, and
 Christian Igel. 
-U-Time: A Fully Convolutional Network for Time Series Segmentation
-  Applied to Sleep Staging.
+<a href="https://arxiv.org/abs/1910.11162">U-Time: A Fully Convolutional Network for Time Series Segmentation
+  Applied to Sleep Staging</a>.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS 2019)</em>, 2019
   </div>
