--- a/publications.html
+++ b/publications.html
@@ -131,8 +131,8 @@ Mathias Perslev,
     Erik Dam,
     Akshay Pai, and
     Christian Igel.
-One Network To Segment Them All: A General, Lightweight System for
-  Accurate 3D Medical Image Segmentation. In:
+<a href="https://arxiv.org/abs/1911.01764">One Network To Segment Them All: A General, Lightweight System for
+  Accurate 3D Medical Image Segmentation</a>. In:
 <em>Medical Image Computing and Computer Assisted
   Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019 <a href="downloads.html#mpunet" class="sup">source code</a>
 </div>
