added some text

--- a/downloads.html
+++ b/downloads.html
@@ -33,13 +33,13 @@
 <div id="inner-page">
 <h1>Downloads</h1>
  
-  <a name="mpunet"></a>
+  <a name="mpunet"><br></a>
   <p>
   
   <h2>Multi-Planar UNet</h2>
   Download 
  <a href="https://github.com/perslev/MultiPlanarUNet">Multi-Planar
-  UNet</a>.
+  UNet</a>, a simple and thoroughly evaluated deep learning Python framework for segmentation of arbitrary medical image volumes. The system requires no task-specific information, no human interaction and is based on a fixed model topology and a fixed hyperparameter set, eliminating the process of model selection and its inherent tendency to cause method-level over-fitting. The system is available in open source and does not require deep learning expertise to use. Without task-specific modifications, the system performed better than or similar to highly specialized deep learning methods across 3 separate segmentation tasks. In addition, it ranked 5-th and 6-th in the first and second round of the 2018 Medical Segmentation Decathlon comprising another 10 tasks. The system relies on multi-planar data augmentation which facilitates the application of a single 2D architecture based on the familiar U-Net. Multi-planar training combines the parameter efficiency of a 2D fully convolutional neural network with a systematic train- and test-time augmentation scheme, which allows the 2D model to learn a representation of the 3D image volume that fosters generalization.
 
   <h3>Paper describing the package</h3> 
 <div class=publication>
@@ -53,7 +53,7 @@ Mathias Perslev,
   Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019
 </div>
 
-<a name="utime"></a>
+<a name="utime"><br></a>
 
 <p>
 
@@ -61,8 +61,8 @@ Mathias Perslev,
 
 U-Time is a fully feed-forward deep learning approach to physiological time series segmentation developed for the analysis of sleep data. U-Time is a temporal fully convolutional network based on the U-Net architecture.It maps sequential inputs of arbitrary length to sequences of class labels on a freely chosen temporal scale. This is done by implicitly classifying every individual time-point of the input signal and aggregating these classifications over fixed intervals to form the final predictions. 
 
-
-Coming soon.
+<p>
+Software package coming soon.
 
 <h3>Paper describing the package</h3> 
 <div class=publication>
@@ -77,7 +77,7 @@ Christian Igel.
   (NeurIPS 2019)</em>, 2019
   </div>
   
-  <a name="woody"></a>
+  <a name="woody"><br></a>
   
 <p>
 
@@ -93,7 +93,7 @@ Christian Igel.
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
   
-<a name="bufferkdtree"></a>
+<a name="bufferkdtree"><br></a>
 
 <p>
 
