--- a/publications.html
+++ b/publications.html
@@ -169,7 +169,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
   Fabian Gieseke and Christian Igel.
   <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
-  (KDD)</em>, pp. 1445-1454, ACM Press, 2018
+  (KDD)</em>, pp. 1445-1454, ACM Press, 2018 <a href="https://github.com/gieseke/woody" class="sup">source code</a>
 </div>
 
   
