--- a/downloads.html
+++ b/downloads.html
@@ -59,10 +59,10 @@ Mathias Perslev,
 
 <h2>U-Time</h2>
 
-U-Time is a fully feed-forward deep learning approach to physiological time series segmentation developed for the analysis of sleep data. U-Time is a temporal fully convolutional network based on the U-Net architecture.It maps sequential inputs of arbitrary length to sequences of class labels on a freely chosen temporal scale. This is done by implicitly classifying every individual time-point of the input signal and aggregating these classifications over fixed intervals to form the final predictions. 
+<a  href="https://github.com/perslev/U-Time">U-Time</a> is a fully feed-forward deep learning approach to physiological time series segmentation developed for the analysis of sleep data. U-Time is a temporal fully convolutional network based on the U-Net architecture.It maps sequential inputs of arbitrary length to sequences of class labels on a freely chosen temporal scale. This is done by implicitly classifying every individual time-point of the input signal and aggregating these classifications over fixed intervals to form the final predictions. 
 
 <p>
-Software package coming soon.
+Download U-Time <a  href="https://github.com/perslev/U-Time">here</a>.
 
 <h3>Paper describing the package</h3> 
 <div class=publication>
