--- a/publications.html
+++ b/publications.html
@@ -31,17 +31,7 @@ scholar profile</a>.
 
 
   
-<div class=publication>
-  Mathias Perslev,
-Michael Hejselbak Jensen,
-Sune Darkner,
-Poul Jørgen Jennum, and
-Christian Igel. 
-U-Time: A Fully Convolutional Network for Time Series Segmentation
-  Applied to Sleep Staging.
-  <em>Advances in Neural Information Processing Systems
-  (NeurIPS 2019)</em>, accepted
-  </div>
+
   
 
 <a name="y19"></a>
@@ -109,7 +99,7 @@ Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
   <a href="https://arxiv.org/abs/1908.07355">Knowledge distillation
   for semi-supervised domain adaptation</a>.
   In:
-<em>Machine Learnig in Clinical Neuroimaging (MLCN 2019)</em>, LNCS
+<em>Machine Learning in Clinical Neuroimaging (MLCN 2019)</em>, LNCS
   <vol>11796</vol>, pp. 68-76, 2019
 </div>
 
@@ -124,7 +114,18 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   of SPIE <vol>10949</vol>, SPIE, 2019
 </div>
 
-
+<div class=publication>
+  Mathias Perslev,
+Michael Hejselbak Jensen,
+Sune Darkner,
+Poul Jørgen Jennum, and
+Christian Igel. 
+<a href="https://arxiv.org/abs/1910.11162">U-Time: A Fully Convolutional Network for Time Series Segmentation
+  Applied to Sleep Staging</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2019)</em>, 2019
+  <a href="downloads.html#utime" class="sup">source code</a> 
+  </div>
 
 <div class=publication>
 Mathias Perslev,
