--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@ Helen Høgh Petersen, and
 Christian Igel.
 <a href="https://doi.org/10.1093/europace/euy257">Predicting Electrical Storms by Remote Monitoring of Implantable
 Cardioverter Defibrillator Patients Using Machine Learning</a>.
-<em>EP Europace</em> <vol>21</vol>(2), pp. 268–274, 2019 
+<em>EP Europace</em> <vol>21</vol>(2), pp. 268-274, 2019 
 </div>
 
 <div class=publication>
