--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ and applications of these methods.
 
 
 <h3>Selected Publications</h3>
+
+
 Please click <a href="publications.html">here</a> for a  <a
 href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
@@ -105,10 +107,23 @@ scholar profile</a>.
 <p>
 
 <div class=publication>
+  Mathias Perslev,
+Michael Hejselbak Jensen,
+Sune Darkner,
+Poul Jørgen Jennum, and
+Christian Igel. 
+<a href="https://arxiv.org/abs/1910.11162">U-Time: A Fully Convolutional Network for Time Series Segmentation
+  Applied to Sleep Staging</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2019)</em>, 2019
+  <a href="downloads.html#utime" class="sup">source code</a> 
+</div>
+
+<div class=publication>
   Fabian Gieseke and Christian Igel.
   <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
-  (KDD)</em>, pp. 1445-1454, ACM Press, 2018
+  (KDD)</em>, pp. 1445-1454, ACM Press, 2018 <a href="https://github.com/gieseke/woody" class="sup">source code</a>
 </div>
 
 <div class=publication>
