--- a/publications.html
+++ b/publications.html
@@ -34,14 +34,18 @@ scholar profile</a>.
 
   
 
-<a name="y19"></a>
+<a name="y20"></a>
 
-<h4>2019</h4>
+<h4>2020</h4>
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
 <a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines</a>. 
-  <em>Artificial Intelligence</em><vol></vol>, 2019
+  <em>Artificial Intelligence</em><vol>278</vol>, 2020
 </div>
+
+<a name="y19"></a>
+
+<h4>2019</h4>
 
 
 <div class=publication>
@@ -123,7 +127,7 @@ Christian Igel.
 <a href="https://arxiv.org/abs/1910.11162">U-Time: A Fully Convolutional Network for Time Series Segmentation
   Applied to Sleep Staging</a>.
   <em>Advances in Neural Information Processing Systems
-  (NeurIPS 2019)</em>, 2019
+  (NeurIPS 2019)</em>, pp. 4417-4428, 2019
   <a href="downloads.html#utime" class="sup">source code</a> 
   </div>
 
