--- a/downloads.html
+++ b/downloads.html
@@ -25,6 +25,7 @@
   <a href="#kta">KTA optimization</a>
   <a href="#MOCMA">MO-CMA</a>
   <a href="#Rprop">Rprop</a>
+  <a href="#GTSRB">Traffic Signs</a>
 </div>
   <a href="http://ai.ku.dk">AI Centre</a>
   <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
@@ -551,6 +552,35 @@ and Interfaces</em> <vol>16</vol>(3), pp. 265-278, 1994.
 	International Conference on Neural Networks</em>, pp.
 	586-591, IEEE Press, 1993
 </div> 
+
+<a name="Rprop"><br></a>
+ 
+<p>
+ 
+<h2>German Traffic Sign Recognition Benchmark</h2>
+
+The German Traffic Sign Recognition Benchmark (GTSRB) is a multi-class image classification benchmark in the domain of advanced driver assistance systems and autonomous driving.
+It was first published at IJCNN 2011, the offical archive can be found <a href="https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/published-archive.html">here</a>.
+
+<a href="GTSRB\ Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor image data directly fromthe official aerchive. You can also download the corresponding notebook
+<a href="GTSRB\ Loading.ipynb"><code>GTSRB\ Loading.ipynb</code></a> directly.
+
+<h3>References</h3>
+
+<div class=publication>
+Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
+<a href="paper/MvCBMLAfTSR.pdf">Man vs. Computer: Benchmarking Machine Learning Algorithms for Traffic Sign Recognition</a>.
+ <em>Neural Networks</em> <vol>32</vol>, pp. 323-332, 2012
+</div>
+
+<div class=publication>
+Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
+ The German Traffic Sign Recognition Benchmark: A Multi-class
+Classification Competition.
+ <em>International Joint Conference on Neural Networks (IJCNN
+2011)</em>, pp. 1453-1460, IEEE Press
+</div>
+
 
 </div>
 </div>
