--- a/downloads.html
+++ b/downloads.html
@@ -553,17 +553,23 @@ and Interfaces</em> <vol>16</vol>(3), pp. 265-278, 1994.
 	586-591, IEEE Press, 1993
 </div> 
 
-<a name="Rprop"><br></a>
+<a name="GTSRB"><br></a>
  
 <p>
  
 <h2>German Traffic Sign Recognition Benchmark</h2>
 
 The German Traffic Sign Recognition Benchmark (GTSRB) is a multi-class image classification benchmark in the domain of advanced driver assistance systems and autonomous driving.
-It was first published at IJCNN 2011, the offical archive can be found <a href="https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/published-archive.html">here</a>.
+It was first published at IJCNN 2011.
 
-<a href="GTSRB\ Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor image data directly fromthe official aerchive. You can also download the corresponding notebook
-<a href="GTSRB\ Loading.ipynb"><code>GTSRB\ Loading.ipynb</code></a> directly.
+<h3>Official data archive</h3>
+The offical archive can be found <a href="https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/published-archive.html">here</a>.
+
+
+<h3>Loading the data in TensorFlow</h3>
+<a href="GTSRB Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor images directly from the official archive.
+You can also download the corresponding notebook
+<a href="GTSRB Loading.ipynb"><code>GTSRB Loading.ipynb</code></a> directly.
 
 <h3>References</h3>
 
