--- a/publications.html
+++ b/publications.html
@@ -561,7 +561,7 @@ Medicine and Biology Society (EMBC)</em>, pp 5469-5472, IEEE Press, 2012 <a href
 <div class=publication>
 Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
 <a href="paper/MvCBMLAfTSR.pdf">Man vs. Computer: Benchmarking Machine Learning Algorithms for Traffic Sign Recognition</a>.
- <em>Neural Networks</em> <vol>32</vol>, pp. 323-332, 2012
+ <em>Neural Networks</em> <vol>32</vol>, pp. 323-332, 2012 <a href="downloads.html#GTSRB" class="sup">data</a>
 </div>
 
 <div class=publication>Christian Igel. Learning &#8712; Artificial
@@ -697,7 +697,8 @@ Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
  The German Traffic Sign Recognition Benchmark: A Multi-class
 Classification Competition.
  <em>International Joint Conference on Neural Networks (IJCNN
-2011)</em>, pp. 1453-1460, IEEE Press
+2011)</em>, pp. 1453-1460, IEEE Press, 2011  
+ <a href="downloads.html#GTSRB" class="sup">data</a>
 </div>
 
 
