--- a/downloads.html
+++ b/downloads.html
@@ -584,7 +584,27 @@ Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
  The German Traffic Sign Recognition Benchmark: A Multi-class
 Classification Competition.
  <em>International Joint Conference on Neural Networks (IJCNN
-2011)</em>, pp. 1453-1460, IEEE Press
+2011)</em>, pp. 1453-1460, IEEE Press, 2011
+</div>
+
+<a name="GTSDB"><br></a>
+ 
+<p>
+ 
+<h2>German Traffic Sign Detection Benchmark</h2>
+
+Data from the German Traffic Sign Detection Benchmark (GTSDB). This archive contains the training set used during the IJCNN 2013 competition
+
+<h3>Official data archive</h3>
+The offical archive for teh detection benchmark be found <a href="https://sid.erda.dk/public/archives/ff17dc924eba88d5d01a807357d6614c/published-archive.html">here</a>.
+
+<h3>References</h3>
+
+  <div class=publication>
+Sebastian Houben, Johannes Stallkamp, Jan Salmen, Marc Schlipsing, and Christian Igel.
+ Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark.
+ <em>International Joint Conference on Neural Networks (IJCNN
+2013)</em>, pp. 715-722, IEEE Press, 2013
 </div>
 
 
