--- a/publications.html
+++ b/publications.html
@@ -516,12 +516,11 @@ and  Christian Igel.
   Sketches</a>.   <em>IEEE International Conference on Big Data
   2013</em>, pp. 28-34,  IEEE Press, 2013</div>
 
-  <!--  -->
   <div class=publication>
 Sebastian Houben, Johannes Stallkamp, Jan Salmen, Marc Schlipsing, and Christian Igel.
  Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark.
  <em>International Joint Conference on Neural Networks (IJCNN
-2013)</em>, pp. 715-722, IEEE Press
+2013)</em>, pp. 715-722, IEEE Press, 2013 <a href="downloads.html#GTSDB" class="sup">data</a>
 </div>
 
 
@@ -697,7 +696,7 @@ Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
  The German Traffic Sign Recognition Benchmark: A Multi-class
 Classification Competition.
  <em>International Joint Conference on Neural Networks (IJCNN
-2011)</em>, pp. 1453-1460, IEEE Press, 2011  
+2011)</em>, pp. 1453-1460, IEEE Press, 2011
  <a href="downloads.html#GTSRB" class="sup">data</a>
 </div>
 
