--- a/downloads.html
+++ b/downloads.html
@@ -569,7 +569,7 @@ The offical archive can be found <a href="https://sid.erda.dk/public/archives/da
 <h3>Loading the data in TensorFlow</h3>
 <a href="GTSRB Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor images directly from the official archive.
 You can also download the corresponding notebook
-<a href="GTSRB Loading.ipynb"><code>GTSRB Loading.ipynb</code></a> directly.
+<a href="GTSRB Loading.ipynb">GTSRB Loading.ipynb</a>.
 
 <h3>References</h3>
 
@@ -581,8 +581,8 @@ Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
 
 <div class=publication>
 Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
- The German Traffic Sign Recognition Benchmark: A Multi-class
-Classification Competition.
+<a href="https://www.researchgate.net/publication/242346625_Detection_of_Traffic_Signs_in_Real-World_Images_The_German_Traffic_Sign_Detection_Benchmark">The German Traffic Sign Recognition Benchmark: A Multi-class
+Classification Competition</a>.
  <em>International Joint Conference on Neural Networks (IJCNN
 2011)</em>, pp. 1453-1460, IEEE Press, 2011
 </div>
@@ -593,10 +593,10 @@ Classification Competition.
  
 <h2>German Traffic Sign Detection Benchmark</h2>
 
-Data from the German Traffic Sign Detection Benchmark (GTSDB). This archive contains the training set used during the IJCNN 2013 competition
+Data from the German Traffic Sign Detection Benchmark (GTSDB). This archive contains the data used in the IJCNN 2013 competition.
 
 <h3>Official data archive</h3>
-The offical archive for teh detection benchmark be found <a href="https://sid.erda.dk/public/archives/ff17dc924eba88d5d01a807357d6614c/published-archive.html">here</a>.
+The offical archive for the detection benchmark be found <a href="https://sid.erda.dk/public/archives/ff17dc924eba88d5d01a807357d6614c/published-archive.html">here</a>.
 
 <h3>References</h3>
 
