--- a/publications.html
+++ b/publications.html
@@ -518,7 +518,7 @@ and  Christian Igel.
 
   <div class=publication>
 Sebastian Houben, Johannes Stallkamp, Jan Salmen, Marc Schlipsing, and Christian Igel.
- Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark.
+ <a href="https://www.researchgate.net/publication/242346625_Detection_of_Traffic_Signs_in_Real-World_Images_The_German_Traffic_Sign_Detection_Benchmark">Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark</a>.
  <em>International Joint Conference on Neural Networks (IJCNN
 2013)</em>, pp. 715-722, IEEE Press, 2013 <a href="downloads.html#GTSDB" class="sup">data</a>
 </div>
