--- a/downloads.html
+++ b/downloads.html
@@ -581,8 +581,8 @@ Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
 
 <div class=publication>
 Johannes Stallkamp, Marc Schlipsing, Jan Salmen, and Christian Igel.
-<a href="https://www.researchgate.net/publication/242346625_Detection_of_Traffic_Signs_in_Real-World_Images_The_German_Traffic_Sign_Detection_Benchmark">The German Traffic Sign Recognition Benchmark: A Multi-class
-Classification Competition</a>.
+The German Traffic Sign Recognition Benchmark: A Multi-class
+Classification Competition.
  <em>International Joint Conference on Neural Networks (IJCNN
 2011)</em>, pp. 1453-1460, IEEE Press, 2011
 </div>
@@ -602,7 +602,7 @@ The offical archive for the detection benchmark be found <a href="https://sid.er
 
   <div class=publication>
 Sebastian Houben, Johannes Stallkamp, Jan Salmen, Marc Schlipsing, and Christian Igel.
- Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark.
+ <a href="https://www.researchgate.net/publication/242346625_Detection_of_Traffic_Signs_in_Real-World_Images_The_German_Traffic_Sign_Detection_Benchmark">Detection of Traffic Signs in Real-World Images: The German Traffic Sign Detection Benchmark</a>.
  <em>International Joint Conference on Neural Networks (IJCNN
 2013)</em>, pp. 715-722, IEEE Press, 2013
 </div>
