added new GTSRB link

--- a/downloads.html
+++ b/downloads.html
@@ -566,10 +566,19 @@ It was first published at IJCNN 2011.
 The offical archive can be found <a href="https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/published-archive.html">here</a>.
 
 
-<h3>Loading the data in TensorFlow</h3>
-<a href="GTSRB Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor images directly from the official archive.
+<h3>Data in different format</h3>
+Because the data is a bit difficult to read in and process, I have put
+an archive online with a simple directory structure and the final training
+and test <a
+href="https://sid.erda.dk/share_redirect/EB0rrpZwuI">images in PNG
+format</a>, which can be easily processed by popular deep learning
+frameworks.
+Let me know if there is something wrong with this archive. Click  <a
+href="https://sid.erda.dk/share_redirect/EB0rrpZwuI">here</a>.
+
+<!-- <a href="GTSRB Loading.html">Here</a> is an example how you can download the traffic sign data in TensorFlow 2.x and generate batches of tensor images directly from the official archive.
 You can also download the corresponding notebook
-<a href="GTSRB Loading.ipynb">GTSRB Loading.ipynb</a>.
+<a href="GTSRB Loading.ipynb">GTSRB Loading.ipynb</a>. -->
 
 <h3>References</h3>
 
