--- a/publications.html
+++ b/publications.html
@@ -1437,13 +1437,29 @@ Christian Igel.  <em>Untersuchungen zur Kettenregel f&uuml;r Fuzzy-Regeln und Re
 implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Department of Computer Science, 1997</div>
 
 
-<h3>Abstracts and not peer-reviewed contributions to conferences</h3>
+<h3>Abstracts and not strictly peer-reviewed contributions to
+conferences and journals</h3>
+
 <div class=publication>
-Mathias Perslev, Akshay  Pai, Christian Igel, Jos Runhaar, and Erik Dam.. Validation of an
+Arjun D Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
+Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
+Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
+OBrien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
+Igel, Erik B Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
+Li, Cem M Deniz, Vladimir Juras, Ravinder Regatte, Garry E Gold, Brian
+A Hargreaves, Valentina Pedoia, Akshay S Chaudhari. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
+</div>
+
+<div class=publication>
+Mathias Perslev, Akshay  Pai, Christian Igel, Jos Runhaar, and Erik Dam. Validation of an
   open source, generic deep learning architecture for 3D MRI
   segmentation - with data from the OAI, PROOF, and
   CCBR. <em>Osteoarthritis and Cartilage</em> <vol>27</vol>(Supplement
   1), pp. S393–S394, 2019
+</div>
+
+<div class=publication>
+Mathias Perslev, Akshay  Pai, Christian Igel, and Erik Dam. Knee Segmentation by Multiplanar Deep Learning Network - with data from OAI. <em>International Workshop on Osteoarthritis Imaging</em>, 2018
 </div>
 
 <div class=publication>
@@ -1461,8 +1477,9 @@ p. 109. University of California, 2015
 <div class=publication>Michiel Kallenberg, Martin Lilholm, Pengfei Diao, Kersten Petersen, Katharina Holland, Nico Karssemeijer, Christian Igel, and Mads Nielsen. Assessing breast cancer masking risk with automated texture analysis in full field digital mammography. In  <em>Breast Imaging and Interventional</em>, p. 218. Radiological Society of North America, Inc, 2015
 </div>
 
-<div class=publication> Michiel Kallenberg, K. Petersen, M. Lilholm, D. Jrgensen, P. Diao, K. Holland,
-N. Karssemeijer, Christian Igel, and Mads Nielsen. Automated texture scoring for assessing breast cancer masking risk in full field digital mammography. In  <em>European Congress of Radiology (ERC 2015)</em>, 2015
+<div class=publication> Michiel Kallenberg, Kersten Petersen, Martin
+  Lilholm, Dan Richter Jørgensen, Pengfei Diao, Katharina Holland,
+Nico Karssemeijer, Christian Igel, and Mads Nielsen. Automated texture scoring for assessing breast cancer masking risk in full field digital mammography. In  <em>European Congress of Radiology (ERC 2015)</em>, 2015
 </div>
 
 <div class=publication>Jan Kremer, Kim Steenstrup Pedersen, and Christian Igel. Support vector machines for active learning. In E <em>uropean Conference on Data Analysis (ECDA)</em>, 2014
