--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,12 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-
+<div class=publication>
+Oswin Krause, Asja Fischer, and Christian Igel. 
+<a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for
+  Estimating the Partition Function of Restricted Boltzmann Machines  (Extended Abstract)</a>. 
+  <em>International Joint Conferences on Artificial Intelligence (IJCAI)</em>, 2020
+</div>
   
 
   
